# sandbox-runtime

./: Cargo.toml  MIGRATION.md  README.rust.md  RUST_REFACTOR_SUMMARY.md  build.sh  srt-settings.example.json
src/: config.rs  error.rs  lib.rs
src/proxy/: http_proxy.rs  mod.rs  socks_proxy.rs
src/sandbox/: docker.rs  linux.rs  macos.rs  manager.rs  mod.rs  seccomp.rs  violation_store.rs
src/utils/: debug.rs  exec.rs  mod.rs  platform.rs  ripgrep.rs
