[package]
name = "sandbox-runtime"
version = "0.0.2"
edition = "2021"
authors = ["Anthropic <noreply@anthropic.com>"]
description = "Lightweight OS-level sandboxing for filesystem and network restrictions"
license = "Apache-2.0"
repository = "https://github.com/anthropic-experimental/sandbox-runtime"
readme = "README.md"
keywords = ["sandbox", "security", "isolation", "network", "filesystem"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "srt"
path = "src/bin/cli.rs"

[lib]
name = "sandbox_runtime"
path = "src/lib.rs"

[dependencies]
# CLI and configuration
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# HTTP proxy
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }

# SOCKS5 proxy
async-socks5 = "0.6"
fast-socks5 = "0.9"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"
globset = "0.4"
shellexpand = "3.1"
shell-words = "1.1"
dirs = "5.0"
futures = "0.3"

# Docker support
bollard = "0.17"

# Platform detection
cfg-if = "1.0"

# Unix-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal", "socket"] }
libc = "0.2"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = "0.6"

[dev-dependencies]
tempfile = "3.12"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
